# semantic-terminal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
crates/semantic-terminal/: Cargo.toml
crates/semantic-terminal-napi/: Cargo.toml
crates/semantic-terminal-napi/src/: lib.rs
crates/semantic-terminal/src/: confirm.rs  fingerprint.rs  lib.rs  state.rs  status.rs  title.rs  tool.rs  types.rs
examples/claude-desktop/: README.md  claude_desktop_config.json
examples/cursor/: README.md
examples/langchain/: README.md
