[workspace]
resolver = "2"
members = [
    "crates/semantic-terminal",
    "crates/semantic-terminal-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ricky Jin"]
license = "MIT"
repository = "https://github.com/rickyjim626/semantic-terminal"
homepage = "https://github.com/rickyjim626/semantic-terminal"
documentation = "https://docs.rs/semantic-terminal"
keywords = ["claude", "terminal", "parser", "semantic", "cli"]
categories = ["parsing", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"

# Internal crates
semantic-terminal = { version = "0.1.0", path = "crates/semantic-terminal" }
